<resources>
    <string name="app_name">Calculadora</string>
    <string name="logo">Logo</string>
    <string name="add">+</string>
    <string name="subst">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="power">x^y</string>
    <string name="ce">CE</string>
    <string name="help">Enter a number</string>
    <string name="zero">0.0</string>
    <string name="textoAboutUs">Desarollado por mi \nEspero que te guste \nNumero de contacto \n6478362382</string>
    <string name="aboutUs">About us</string>
</resources>